Fix overflowing of tab header content

--- a/app/assets/stylesheets/tabs/_entity_list.css.sass
+++ b/app/assets/stylesheets/tabs/_entity_list.css.sass
@@ -15,6 +15,7 @@
     .left-nav
       margin: 0
       padding: 0
+      overflow: hidden
     .add-entity
       position: absolute
       top: 0
